Fixed a bug where going into fullscreen in non dark mode will cause the background of the reader to go black. Fixed a rendering issue with margin left/right screwing html up. Fixed an issue where line-height: 100% would break book's css, now we remove the styles if they are non-valuable.

--- a/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
+++ b/UI/Web/src/app/book-reader/book-reader/book-reader.component.scss
@@ -156,17 +156,68 @@ $primary-color: #0062cc;
 .reading-section {
     height: 100vh;
     width: 100%;
-    overflow: auto;
+    //overflow: auto;  // This will break progress reporting
 }
 
 .book-content {
     position: relative;
+
+    // A bunch of resets so books render correctly
+    html, body, div, span, applet, object, iframe,
+    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+    a, abbr, acronym, address, big, cite, code,
+    del, dfn, em, img, ins, kbd, q, s, samp,
+    small, strike, strong, sub, sup, tt, var,
+    b, u, i, center,
+    dl, dt, dd, ol, ul, li,
+    fieldset, form, label, legend,
+    table, caption, tbody, tfoot, thead, tr, th, td,
+    article, aside, canvas, details, embed, 
+    figure, figcaption, footer, header, hgroup, 
+    menu, nav, output, ruby, section, summary,
+    time, mark, audio, video {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+    }
+    /* HTML5 display-role reset for older browsers */
+    article, aside, details, figcaption, figure, 
+    footer, header, hgroup, menu, nav, section {
+        display: block;
+    }
+    body {
+        line-height: 1;
+    }
+    & ol, & ul {
+        list-style: none;
+    }
+    & blockquote, & q {
+        quotes: none;
+    }
+    & blockquote:before, & blockquote:after,
+    & q:before, & q:after {
+        content: '';
+        content: none;
+    }
+    & table {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+    & a, & :link {
+        color: blue;
+    }
+}
+
+.book-content a {
+    color: blue;
 }
 
 .drawer-body {
     padding-bottom: 20px;
 }
-
 
 
 // Click to Paginate styles
